# projetoGenAI-api

./: extracted_section.txt  main.py  pyproject.toml
src/: server.py
src/app/api/: __init__.py  controller.py
src/app/services/: service.py  tasks_storage.py
src/app/utils/: question.py
