[project]
name = "projeto-genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.121.0",
    "google-genai>=1.47.0",
    "pymupdf>=1.26.5",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]
